--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 ASS2/books_1.Best_Books_Ever.csv
+ASS2/glove.6B.50d.txt
+.gitignore
+ASS2/glove.6B.200d.txt
+.gitignore
+ASS2/glove.6B.300d.txt
+ASS2/glove.6B.zip
+ASS2/glove.6B.100d.txt
